--- a/src/global.css
+++ b/src/global.css
@@ -65,6 +65,8 @@ img {
   body {
     font-size: 15px;
     padding: 0 !important;
+    /* reserve space for fixed navbar on mobile */
+    padding-top: 75px !important;
   }
   #root {
     max-width: 100vw;
@@ -76,6 +78,7 @@ img {
   body {
     font-size: 14px;
     padding: 0 !important;
+    padding-top: 65px !important;
   }
   #root {
     max-width: 100vw;
@@ -87,6 +90,7 @@ img {
   body {
     font-size: 13px;
     padding: 0 !important;
+    padding-top: 60px !important;
   }
   #root {
     padding: 0 !important;
